@@ -3,38 +3,57 @@ package it.unibo.mparty.model.gameBoard.impl;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Objects;
 import java.util.Set;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 
 import it.unibo.mparty.model.gameBoard.api.GameBoard;
-import it.unibo.mparty.model.gameBoard.util.BoardType;
-import it.unibo.mparty.model.gameBoard.util.Direction;
-import it.unibo.mparty.model.gameBoard.util.Pair;
+import it.unibo.mparty.utilities.BoardType;
+import it.unibo.mparty.utilities.Direction;
+import it.unibo.mparty.utilities.Pair;
 import it.unibo.mparty.utilities.Position;
-import it.unibo.mparty.model.gameBoard.util.RandomFromSet;
+import it.unibo.mparty.utilities.RandomFromSet;
+import it.unibo.mparty.utilities.SlotType;
 import it.unibo.mparty.model.gameBoard.util.RandomListGenerator;
 import it.unibo.mparty.model.gameBoard.api.Slot;
-import it.unibo.mparty.model.gameBoard.util.SlotType;
 
+/**
+ * This is an Abstract class that implements GameBoard that could be considerated as a
+ * directed graph that contains his nodes (slots)
+ */
 public abstract class AbstractBoardImpl implements GameBoard{
+
+    private static final int N_PARTS_INPUT_FILE = 4;
+    private static final String UP = "U";
+    private static final String DOWN = "D";
+    private static final String RIGHT = "R";
+    private static final String LEFT = "L";
 
     private final int width;
     private final int height;
     private final Position initialPosition;
-    private final Set<Position> starsPositions;
-    private Map<Position,Slot> board = new HashMap<>();
-    protected List<SlotType> avaiableSlotTypes;
     private final Set<Pair<SlotType,Double>> rules;
     private final BoardType boardType; 
-
     private final String filePath;
+    private final Set<Position> starsPositions;
+    private Map<Position,Slot> board = new HashMap<>();
+    private List<SlotType> avaiableSlotTypes;
+    private boolean updateStarsSlot = false;
 
-    public AbstractBoardImpl(int width, int height, Position initialPosition, Set<Position> starPositions, String filePath, Set<Pair<SlotType,Double>> rules, BoardType boardType){
+    public AbstractBoardImpl(int width,
+                             int height,
+                             Position initialPosition,
+                             Set<Position> starPositions,
+                             String filePath,
+                             Set<Pair<SlotType,Double>> rules,
+                             BoardType boardType){
         this.width = width;
         this.height = height;
         this.initialPosition = initialPosition;
@@ -46,16 +65,21 @@ public abstract class AbstractBoardImpl implements GameBoard{
         this.generateBoard();
     }
     
-    private void generateBoard() {
+    /**
+     * Generate tha actual GameBoard
+     */
+    protected void generateBoard() {
         this.addSlot(RandomFromSet.get(this.starsPositions), SlotType.ACTIVE_STAR);
-        this.starsPositions.stream().forEach(p -> this.addSlot(p, SlotType.NOT_ACTIVE_STAR));
+        this.starsPositions.stream()
+                           .forEach(p -> this.addSlot(p, SlotType.NOT_ACTIVE_STAR));
         this.addSlot(this.getStrartingPosition(), SlotType.PATH);
         this.createPathFromFile(this.filePath);
         }
 
     @Override
     public SlotType getSlotType(Position position) {
-        return this.board.containsKey(position) ? this.board.get(position).getSlotType() : SlotType.VOID;
+        return this.board.containsKey(position) ? 
+               this.board.get(position).getSlotType() : SlotType.VOID;
     }
     
     @Override
@@ -63,29 +87,39 @@ public abstract class AbstractBoardImpl implements GameBoard{
         return this.initialPosition;
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     public Map<Direction, Position> getNextPositions(Position position) {
-        return this.getSlot(position).hasNext() ? Collections.unmodifiableMap(this.getSlot(position).getNextConnections()) : Collections.EMPTY_MAP;
+        return this.getSlot(position).hasNext() ? 
+        Collections.unmodifiableMap(this.getSlot(position).getNextConnections()) :
+        Collections.emptyMap();
     }
 
     @Override
-    public Position getStarPosition() {
-        return this.starsPositions.stream()
-                                  .filter(p -> this.getSlotType(p).equals(SlotType.ACTIVE_STAR))
-                                  .findFirst()
-                                  .get();
+    public Position getStarPosition() throws IllegalStateException{
+        Set<Position> star = this.starsPositions
+                                 .stream()
+                                 .filter(p -> this.getSlotType(p).equals(SlotType.ACTIVE_STAR))
+                                 .collect(Collectors.toSet());
+        if (star.size() != 1) {
+            throw new IllegalStateException();
+        } 
+        return star.stream().findFirst().get();
     }
 
     @Override
-    public void changeStarPosition() {
-        Set<Position> possibleNextStarPosition = this.starsPositions.stream()
-                                                                    .filter(p -> this.getSlotType(p).equals(SlotType.NOT_ACTIVE_STAR))
-                                                                    .collect(Collectors.toSet());
-        Position newStarPosition = RandomFromSet.get(possibleNextStarPosition);
+    public void changeStarPosition() throws IllegalStateException{
+        Set<Position> nextStars = this.starsPositions
+                                      .stream()
+                                      .filter(p -> this.getSlotType(p).equals(SlotType.NOT_ACTIVE_STAR))
+                                      .collect(Collectors.toSet());
+        if (nextStars.isEmpty()) {
+            throw new IllegalStateException();
+        }
+        Position newStarPosition = RandomFromSet.get(nextStars);
         Position oldStarPosition = this.getStarPosition();
         this.board.get(newStarPosition).changeSlotType(SlotType.ACTIVE_STAR);
         this.board.get(oldStarPosition).changeSlotType(SlotType.NOT_ACTIVE_STAR);
+        this.updateStarsSlot = true;
     }
 
     @Override
@@ -94,97 +128,119 @@ public abstract class AbstractBoardImpl implements GameBoard{
     }
 
     @Override
-    public void printBoard(){
-        for(int j = 0; j < this.height; j++){
-            String line = "";
-            for(int i = 0; i < this.width; i++){
-                SlotType slotType = this.getSlotType(new Position(i, j));
-                String c = "";
-                switch (slotType) {
-                    case VOID: c = "."; break;
-                    case ACTIVE_STAR: c = "*"; break;
-                    case PATH: c = "O"; break;
-                    case SINGLEPLAYER: c = "1"; break;
-                    case MULTIPLAYER: c = "2"; break;
-                    case BONUS: c = "B"; break;
-                    case MALUS: c = "M"; break;
-                    case NOT_ACTIVE_STAR: c = "s"; break;
-                    case SHOP: c = "I"; break;
-                    default: c = "."; break;
-                } 
-                line = line + c;
-            }
-            System.out.println(j<10 ? " " + j + line : "" + j + line);
-        }
-    }
-
-    @Override
     public Map<Position,Slot> getBoard() {
         return Collections.unmodifiableMap(this.board);
     }
 
-    private void addSlot(Position position, SlotType slotType) {
+    @Override
+    public Map<Position,SlotType> getSlotTypeBoardConfiguration() {
+        Map<Position,SlotType> output = new HashMap<>();
+        for (Entry<Position, Slot> entry : this.board.entrySet()) {
+            output.put(entry.getKey(), entry.getValue().getSlotType());
+        }
+        return Collections.unmodifiableMap(output);
+    }
+
+    @Override
+    public Map<Position, SlotType> getSlotsToUpdate() {
+        if (this.updateStarsSlot) {
+            Map<Position,SlotType> slotsToUpdate = new HashMap<>();
+            this.starsPositions.stream().forEach(p -> slotsToUpdate.put(p, this.getSlotType(p)));
+            this.updateStarsSlot = false;
+            return Collections.unmodifiableMap(slotsToUpdate);
+        }
+        return Collections.emptyMap();
+    }
+
+    /**
+     * If the slot is not in the board and the position is accepted,
+     * then create and add the slot to the board
+     * @param position position of the new slot
+     * @param slotType type of the new slot
+     */
+    protected void addSlot(Position position, SlotType slotType) {
         if (!this.board.containsKey(position) && isValidPosition(position)){
             this.board.put(position, new SlotImpl(position, slotType));
         }
     }
 
-    /* 
-    private void addSlots(Set<Position> positions){
-        positions.stream().forEach(p -> this.addSlot(p, this.getNewSlotType()));
-    }
-    */
-
-    private void addConnection(Position from, Position to, Direction dir) {
+    /**
+     * If both the position are in the board, then create a directed connection (edge)
+     * @param from the position where starts the connection
+     * @param to the position where ends the connection
+     * @param dir the direction of the connection
+     */
+    protected void addConnection(Position from, Position to, Direction dir) {
         if (this.board.containsKey(from) && this.board.containsKey(to)) {
-            this.board.get(from).addNext(dir, to);
-            this.board.get(to).addPrev(dir, from);
+            this.getSlot(from).addNext(dir, to);
+            this.getSlot(to).addPrev(dir, from);
         };
     }
 
-    /* 
-    private void addConnections(Set<Position> positions, Direction dir){
-        for (Position p : positions) {
-            Position nextP = getNeighbor(p, dir);
-            if (positions.contains(nextP)) {
-                this.addConnection(p, nextP, dir);
-            }
-        }
-    }
-    */
-
+    /**
+     * Check if the position is valid for the board
+     * @param position the position to check
+     * @return true if is acceptable, otherwise false
+     */
     protected boolean isValidPosition(Position position) {
         return isInTheBoard(position);
     }
 
-    private boolean isInTheBoard(Position position){
+    /**
+     * Check if the position is in board limits
+     * @param position the position to check
+     * @return true if is in board limits, otherwise false
+     */
+    protected boolean isInTheBoard(Position position){
         return  position.getX() >= 0 && position.getX() < this.width &&
                 position.getY() >= 0 && position.getY() < this.height;
     }
 
-    private void createPath(Position from, int steps, Direction currentDir){
+    /**
+     * Create recursively connections from a position towards a direction
+     * @param from the starting position
+     * @param steps the number of recursions
+     * @param currentDir the direction towards create the connections
+     */
+    protected void createPath(Position from, int steps, Direction currentDir){
         this.addSlot(from, getNewSlotType());
         Position to = this.getNeighbor(from, currentDir);
         for (int i = 0; i < steps; i++) {
             this.addSlot(to, getNewSlotType());
             this.addConnection(from, to, currentDir);
-            from=to;
-            to=this.getNeighbor(to, currentDir);
+            from = to;
+            to = this.getNeighbor(to, currentDir);
         }
     }
 
-    private void createPathFromFile(String filePath){
-        try (BufferedReader br = new BufferedReader(new FileReader(filePath))) {
+    /**
+     * Read from a file the data to call recursively {@link createPath}
+     * @param filePath file path of the file to read
+     */
+    protected void createPathFromFile(String filePath){
+        InputStream inputStream = ClassLoader.getSystemResourceAsStream(this.filePath);
+        if (Objects.isNull(inputStream)) {
+            throw new IllegalStateException();
+        }
+        try (BufferedReader br = new BufferedReader(new InputStreamReader(inputStream))) {
             String line;
             while ((line = br.readLine()) != null) {
                 String[] parts = line.split(" ");
-                if (parts.length == 4){
+                if (parts.length == N_PARTS_INPUT_FILE){
                     int x = Integer.parseInt(parts[0]);
                     int y = Integer.parseInt(parts[1]);
+                    Position pos = new Position(x, y);
                     int steps = Integer.parseInt(parts[2]);
                     String d = parts[3];
-                    Direction dir = d.equals("U") ? Direction.UP : d.equals("D") ? Direction.DOWN : d.equals("L") ? Direction.LEFT : Direction.RIGHT;
-                    this.createPath(new Position(x, y), steps, dir);
+                    Direction dir = d.equals(UP) ?
+                                    Direction.UP : d.equals(DOWN) ?
+                                    Direction.DOWN : d.equals(LEFT) ?
+                                    Direction.LEFT : d.equals(RIGHT) ?
+                                    Direction.RIGHT : null;
+                    
+                    if (Objects.nonNull(dir)) {
+                        this.createPath(pos, steps, dir);
+                    }
                 }
             }
         } catch (IOException e) {
@@ -192,27 +248,56 @@ public abstract class AbstractBoardImpl implements GameBoard{
         }
     }
 
+    /**
+     * Get the slot that correspond a the position
+     * @param position the position requested
+     * @return the {@link Slot} of the position
+     */
     protected Slot getSlot(Position position) {
-        return this.board.containsKey(position) ? this.board.get(position) : new SlotImpl(position, SlotType.VOID);
+        return this.board.containsKey(position) ?
+               this.board.get(position) : new SlotImpl(position, SlotType.VOID);
     }
 
-    protected Position getNeighbor(Position p, Direction dir) {
-        return new Position(p.getX() + (dir.equals(Direction.RIGHT) ? 1 : 0) + (dir.equals(Direction.LEFT) ? -1 : 0), p.getY() + (dir.equals(Direction.UP) ? -1 : 0) + (dir.equals(Direction.DOWN) ? 1 : 0));
+    /**
+     * Get the next Slot from a position towards a direction
+     * @param from the starting position
+     * @param dir the direction
+     * @return
+     */
+    protected Position getNeighbor(Position from, Direction dir) {
+        return new Position(from.getX()
+                            + (dir.equals(Direction.RIGHT) ? 1 : 0)
+                            + (dir.equals(Direction.LEFT) ? -1 : 0),
+                            from.getY()
+                            + (dir.equals(Direction.UP) ? -1 : 0)
+                            + (dir.equals(Direction.DOWN) ? 1 : 0));
     }
 
+    /**
+     * Get randomly a new SlotType
+     * @return
+     */
     protected SlotType getNewSlotType(){
         if (this.avaiableSlotTypes.isEmpty()) {
             this.avaiableSlotTypes = setAviableSlotType();
         }
-        SlotType output = this.avaiableSlotTypes.getFirst();
-        this.avaiableSlotTypes.removeFirst();
+        SlotType output = this.avaiableSlotTypes.get(0);
+        this.avaiableSlotTypes.remove(0);
         return output;
     }
     
+    /**
+     * Create a list that contains in a random order based on the board's rules'
+     * @return the random ordered list
+     */
     protected List<SlotType> setAviableSlotType() {
         return RandomListGenerator.generate(this.rules);
     }
     
+    /**
+     * Get the Board Type
+     * @return the board type of the board
+     */
     public BoardType getBoardType() {
         return this.boardType;
     }
